--- a/.github/workflows/release-production.yml
+++ b/.github/workflows/release-production.yml
@@ -1,8 +1,9 @@
 name: Release production
 
 on:
-    release:
-        types: [published]
+    push:
+        tags:
+            - production/*
 
 jobs:
     build:
